fixed the background on mobile

--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@
     box-sizing: border-box;
 }
 
+html, body{
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 body{
     width: 100%;
     height: auto;
@@ -20,7 +25,7 @@ header{
     top: 0;
     left: 0;
     width: 100%;
-    padding: 15px 200px;
+    padding: 15px 8%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -29,7 +34,7 @@ header{
 
 header.sticky{
     background-color: #3a6cf4;
-    padding: 10px 200px;
+    padding: 10px 8%;
 }
 
 header .brand{
@@ -46,7 +51,7 @@ header .navigation{
 
 header .navigation a{
     color: white;
-    font-size: 3em;
+    font-size: 1em;
     text-decoration: none;
     font-weight: 500;
     margin-left: 30px;
@@ -62,7 +67,7 @@ header.sticky .navigation a:hover{
 }
 
 section{
-    padding: 100px 200px;
+    padding: 100px 8%;
 }
 
 .main{
@@ -83,6 +88,8 @@ section{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    max-width: 1400px;
+    margin: auto;
 }
 
 .hero-image{
@@ -211,13 +218,6 @@ section{
     flex-direction: column;
 }
 
-.section-title{
-    position: relative;
-    color: #3a6cf4;
-    font-size: 1em;
-    font-weight: 800;
-    margin-bottom: 60px;
-}
 
 
 .section-title{
@@ -700,7 +700,7 @@ section{
     flex-direction: column;
     text-align: center;
   }
-
+ 
   .hero-image{
     width: 80%;
     margin-top: 40px;
